Create IMapToCreate interface off of ObjectConverter.

--- a/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
+++ b/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMapToCreate.cs" />
     <Compile Include="ObjectConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
