--- a/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
+++ b/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IMapToCreate.cs" />
+    <Compile Include="IObjectConverter.cs" />
     <Compile Include="ObjectConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
