Update names of objects to more closely align with domain language.

--- a/AutoMapperAssist/AutoMapperAssist.Tests/AutoMapperAssist.Tests.csproj
+++ b/AutoMapperAssist/AutoMapperAssist.Tests/AutoMapperAssist.Tests.csproj
@@ -46,7 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConverterTests.cs" />
+    <Compile Include="ObjectMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
