--- a/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
+++ b/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
@@ -49,9 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IMapToCreate.cs" />
-    <Compile Include="IObjectConverter.cs" />
-    <Compile Include="ObjectConverter.cs" />
+    <Compile Include="IMapToDefine.cs" />
+    <Compile Include="IObjectMapper.cs" />
+    <Compile Include="ObjectMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
