--- a/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
+++ b/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigurationHelper.cs" />
+    <Compile Include="ConfigurationHelpers.cs" />
     <Compile Include="IMapToDefine.cs" />
     <Compile Include="IObjectMapper.cs" />
     <Compile Include="ObjectMapper.cs" />
