--- a/AutoMapperAssist/AutoMapperAssist.Tests/AutoMapperAssist.Tests.csproj
+++ b/AutoMapperAssist/AutoMapperAssist.Tests/AutoMapperAssist.Tests.csproj
@@ -46,7 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ObjectMapper.cs" />
+    <Compile Include="MapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestingHelpersTests.cs" />
   </ItemGroup>
