--- a/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
+++ b/AutoMapperAssist/AutoMapperAssist/AutoMapperAssist.csproj
@@ -51,8 +51,8 @@
   <ItemGroup>
     <Compile Include="ConfigurationHelpers.cs" />
     <Compile Include="IMapToDefine.cs" />
-    <Compile Include="IObjectMapper.cs" />
-    <Compile Include="ObjectMapper.cs" />
+    <Compile Include="IMapper.cs" />
+    <Compile Include="Mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestingHelpers.cs" />
   </ItemGroup>
