--- a/src/AutoMapperAssist/AutoMapperAssist.csproj
+++ b/src/AutoMapperAssist/AutoMapperAssist.csproj
@@ -53,7 +53,7 @@
     <Compile Include="IAbstractMapper.cs" />
     <Compile Include="IMapToDefine.cs" />
     <Compile Include="IMapper.cs" />
-    <Compile Include="AbstractMapper.cs" />
+    <Compile Include="Mapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestingHelpers.cs" />
   </ItemGroup>
