--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\AutoMapperAssist\packages.config" />
+  <repository path="../AutoMapperAssist.Tests/packages.config" />
+  <repository path="../AutoMapperAssist/packages.config" />
   <repository path="..\AutoMapperAssist.Tests\packages.config" />
+  <repository path="..\AutoMapperAssist\packages.config" />
 </repositories>
