--- a/src/AutoMapperAssist.Tests/packages.config
+++ b/src/AutoMapperAssist.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
   <package id="Moq" version="4.0.10827" />
-  <package id="AutoMapper" version="2.0.0" />
   <package id="NUnit" version="2.5.10.11092" />
 </packages>
